k8s-tutorial-app/k8s/client/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: k8s-tut
spec:
  selector:
    matchLabels:
      component: client-deployment
  template:
    metadata:
      labels:
        component: client-deployment
    spec:
      containers:
      - name: client
        image: k8s-client
        imagePullPolicy: Never
        resources:
          limits:
            memory: "500Mi"
            cpu: "1"
        ports:
        - containerPort: 3000
