k8s-tutorial-app/k8s/client/client-cluter-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip
  namespace: k8s-tut
spec:
  type: ClusterIP
  selector:
    component: client-deployment
  ports:
  - port: 3000
    targetPort: 3000
