k8s-tutorial-app/k8s/client/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: k8s-tut
spec:
  type: ClusterIP
  selector:
    component: client
  ports:
  - port: 3000
    targetPort: 3000
