k8s-tutorial-app/k8s/client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: k8s-tut
  # High level configurations
  annotations:
    # Tell k8s we want to create ingress controller based on nginx project
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
        # There could be many paths for different services
        # Allow all pathing to be directed to client-service
        - path: /?(.*)
          pathType: Prefix
          backend:
            # Associate to client-service
            service:
              name: client-cluster-ip
              port: 
                number: 3000
